# openai-agents-harness

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.storage.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.qoder/plans/: Memory系统集成方案_9924d1a2.md
app/: __init__.py  main.py  settings.py
app/capabilities/: __init__.py
app/core/: __init__.py  database.py  event_bus.py  http_client.py  kafka_producer.py  logging.py  rate_limiter.py  redis_client.py  snowflake.py
app/models/: response.py
app/routers/: chat_router.py  health_router.py
app/shared/: __init__.py
app/utils/: response_utils.py
config/: memory_migration.sql  memory_postgres_pgvector_migration.sql  prod.env.example  test.env.example
data/: README.md
docker/: Dockerfile
docs/: ADVANCED_AGENTS_GUIDE.md  ADVANCED_AGENTS_INTEGRATION.md  AGENT_ORCHESTRATOR_USAGE.md  ARCHITECTURE_DESIGN.md  AUTH_RATE_LIMIT_PLAN.md  CONTEXT_COMPRESSION_PLAN.md  DOCUMENTATION_SUMMARY.md  GIT_SUBMIT_GUIDE.md  LANGFUSE_INTEGRATION_PLAN.md  MEMORY_SYSTEM.md  MODEL_FALLBACK_RETRY_TIMEOUT_PLAN.md  MODEL_RESILIENCE_GUIDE.md  OBSERVABILITY_GUIDE.md  PROJECT_DOCUMENTATION.md  PROMPT_MANAGEMENT_PLAN.md  QUICKSTART.md  README.md  SECURITY_AUDIT_REPORT.md  SIMPLE_LOGGING_GUIDE.md  STRUCTURED_LOGGING_PLAN.md
docs/architecture/: ARCHITECTURE_DESIGN.md
docs/design/: ADVANCED_AGENTS_INTEGRATION.md  ARCHITECTURE_DESIGN.md  AUTH_RATE_LIMIT_PLAN.md  CONTEXT_COMPRESSION_PLAN.md  LANGFUSE_INTEGRATION_PLAN.md  MODEL_FALLBACK_RETRY_TIMEOUT_PLAN.md  PROMPT_MANAGEMENT_PLAN.md  STRUCTURED_LOGGING_PLAN.md
docs/design-notes/: ADVANCED_AGENTS_INTEGRATION.md  AUTH_RATE_LIMIT_PLAN.md  CONTEXT_COMPRESSION_PLAN.md  LANGFUSE_INTEGRATION_PLAN.md  MODEL_FALLBACK_RETRY_TIMEOUT_PLAN.md  STRUCTURED_LOGGING_PLAN.md
docs/getting-started/: QUICKSTART.md
docs/guides/: ADVANCED_AGENTS_GUIDE.md  AGENT_ORCHESTRATOR_USAGE.md  MEMORY_SYSTEM.md  MODEL_RESILIENCE_GUIDE.md  OBSERVABILITY_GUIDE.md  SIMPLE_LOGGING_GUIDE.md
docs/reports/: MEMORY_SYSTEM_TEST_REPORT.md  MIGRATION_REPORT.md
docs/usage/: ADVANCED_AGENTS_GUIDE.md  AGENT_ORCHESTRATOR_USAGE.md  MEMORY_SYSTEM.md  MODEL_RESILIENCE_GUIDE.md  OBSERVABILITY_GUIDE.md  SESSION_STORE_MIGRATION.md
examples/: README.md  advanced_agents_components.py  advanced_agents_example.py  handoff.py  hitl_resume.py  model_resilience.py  model_resilience_example.py  observability.py  observability_example.py  scaffold_selection.py
prompts/agents/: main_chat.yaml  main_system_chat.yaml  main_user_chat.yaml
prompts/capabilities/: summary.yaml
src/: cli.py  main.py
src/api/: app.py
src/core/: agents_result_parser.py  config.py  database.py  http_client.py  logging.py  rate_limiter.py  redis_client.py  signing.py  time_utils.py
src/harness/: __init__.py  builder.py  catalog.py  config.py  context.py  deps.py  manifest.py
src/infrastructure/: __init__.py  database.py  http_client.py  kafka_producer.py
src/services/: chat_service.py  chat_stream_cache.py
src/utils/: response.py  response_utils.py
tests/: README.md  demo_structured_logging.py  test_advanced_agents.py  test_advanced_agents_e2e.py  test_agent_full.py  test_context_compression.py  test_langfuse_simple.py  test_memory_system.py  test_middleware_auth.py  test_middleware_rate_limit.py  test_model_name.py  test_model_resilience.py  test_orchestrator_pluggable.py  test_prompt_management.py  test_real_agent_e2e.py  test_resilience_simple.py  test_structured_logging.py
tests/e2e/: test_advanced_agents_e2e.py  test_langfuse.py  test_langfuse_simple.py  test_model_name.py  test_model_resilience.py  test_real_agent_e2e.py  test_resilience_simple.py
tests/integration/: test_advanced_agents.py  test_agent_full.py  test_context_compression.py  test_memory_system.py  test_middleware_auth.py  test_middleware_rate_limit.py  test_orchestrator_pluggable.py  test_prompt_management.py  test_structured_logging.py
tests/unit/: test_advanced_router.py  test_agent_runtime_resume.py  test_capability_catalog.py  (+30 more)
(+118 files in other folders)
