[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openai-agents-harness"
version = "0.1.0"
description = "OpenAI Agents SDK based agent application harness and engineering scaffold"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "OpenAI Agents Harness Contributors"}
]
keywords = ["openai", "agents", "agent-framework", "fastapi", "harness"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn>=0.34.0",
    "openai-agents>=0.8.0",
    "openai>=2.26.0",
    "sqlalchemy>=2.0.0",
    "greenlet>=3.0.0",
    "aiosqlite>=0.20.0",
    "aiomysql>=0.2.0",
    "asyncpg>=0.29.0",
    "psycopg[binary,pool]>=3.2.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tiktoken>=0.7.0",
    "PyJWT>=2.8.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
memory = [
    "apscheduler>=3.10.0",
    "mem0ai>=0.1.0",
    "elasticsearch>=9.0.0",
]
observability = [
    "langfuse>=2.50.0",
    "openinference-instrumentation-openai-agents>=0.1.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
]
kafka = [
    "aiokafka>=0.12.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
all = [
    "apscheduler>=3.10.0",
    "mem0ai>=0.1.0",
    "elasticsearch>=9.0.0",
    "langfuse>=2.50.0",
    "openinference-instrumentation-openai-agents>=0.1.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "aiokafka>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/rnb-tron/openai-agents-harness"
Documentation = "https://github.com/rnb-tron/openai-agents-harness#readme"
Issues = "https://github.com/rnb-tron/openai-agents-harness/issues"

[project.scripts]
openai-agents-harness = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E402", "F401", "F841"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
